fixed layout issue, added barchart and map interaction on mobile devices

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -86,7 +86,7 @@ nav {
 div.container {
     width: 100%;
     position: relative;
-    clear: both;
+    //clear: both;
     &.load {
         background: $aubergine;
         height: 100vh;
@@ -159,16 +159,18 @@ div.mainView {
         width: 100%;
         padding-top: 28px;
         @media screen and (min-width: 1024px) and (max-width: 1280px) {
-            left: 60%;
+            //left: 60%;
+            margin-left: 60%;
             width: 40%;
-            float: left;
-            padding-top: 100px;
+            //float: left;
+            margin-top: 280px;
         }
         @media screen and (min-width: 1280px) {
-            left: 68%;
+            //left: 68%;
+            margin-left: 68%;
             width: 32%;
-            float: left;
-            padding-top: 100px;
+            //float: left;
+            margin-top: 280px;
         }
     }
 }
@@ -177,16 +179,16 @@ div#map {
     width: 100%;
     height: 40vh;
     @media screen and (min-width: 1024px) and (max-width: 1280px) {
-        right: 40%;
+        //right: 40%;
         width: 60%;
         float: left;
-        height: 100vh;
+        height: 80vh;
     }
     @media screen and (min-width: 1280px) {
-        right: 32%;
+        //right: 32%;
         width: 68%;
         float: left;
-        height: 100vh;
+        height: 80vh;
     }
 }
 
@@ -194,15 +196,19 @@ div.statistics {
     display: none;
     @media screen and (min-width: 1024px) and (max-width: 1280px) {
         display: block;
-        left: 60%;
+        //left: 60%;
+        margin-left: 60%;
+        margin-top: 98px;
         width: 40%;
-        float: left;
+        //float: left;
     }
     @media screen and (min-width: 1280px) {
         display: block;
-        left: 68%;
+        //left: 68%;
+        margin-left: 68%;
+        margin-top: 98px;
         width: 32%;
-        float: left;
+        //float: left;
     }
     & > .stat {
         width: 80%;
@@ -457,4 +463,20 @@ div.statistics {
             padding: 14px;
         }
     }
+}
+
+
+
+.percentText {
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
+    font-size: 12px;
+    fill: $aubergineDark;
+}
+
+.awardText {
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 11px;
+    fill: $white;
 }
